change libfreeimage to libexif

--- a/CameraControllerApi/Makefile
+++ b/CameraControllerApi/Makefile
@@ -1,6 +1,6 @@
 CC=g++ -g
 CFLAGS=-c -Wall
-LDFLAGS= -lboost_system -lgphoto2 -lmicrohttpd -lfreeimage
+LDFLAGS= -lboost_system -lgphoto2 -lmicrohttpd -lexif
 SOURCES=main.cpp Api.cpp Base64.cpp CameraController.cpp Command.cpp Helper.cpp Server.cpp Settings.cpp
 OBJECTS=$(SOURCES:.cpp=.o)
 EXECUTABLE=CameraControllerApi
