--- a/CameraControllerApi/Makefile
+++ b/CameraControllerApi/Makefile
@@ -1,6 +1,6 @@
 CC=g++ -g 
 CFLAGS=-c -Wall -std=c++0x
-LDFLAGS= -lboost_system -lgphoto2 -lmicrohttpd -lexif
+LDFLAGS= -lboost_system -lgphoto2 -lmicrohttpd -lexif -lpthread
 SOURCES=main.cpp Api.cpp Base64.cpp CameraController.cpp Command.cpp Helper.cpp Server.cpp Settings.cpp
 OBJECTS=$(SOURCES:.cpp=.o)
 EXECUTABLE=CameraControllerApi
