changing makefile and some minimal changes in settings class

--- a/CameraControllerApi/Makefile
+++ b/CameraControllerApi/Makefile
@@ -1,18 +1,24 @@
-CC=g++ -g 
-CFLAGS=-c -Wall -std=c++0x
-LDFLAGS= -lboost_system -lgphoto2 -lmicrohttpd -lexif -lpthread
-SOURCES=main.cpp Api.cpp Base64.cpp CameraController.cpp Command.cpp Helper.cpp Server.cpp Settings.cpp
-OBJECTS=$(SOURCES:.cpp=.o)
+CC=g++ -g
+CXXFLAGS=-c -Wall -I include -std=c++0x
+LDFLAGS= -lboost_system -lboost_filesystem -lgphoto2 -lmicrohttpd -lexif -lpthread
+CPP_FILES := $(wildcard src/*.cpp)
+OBJ_FILES := $(addprefix obj/,$(notdir $(CPP_FILES:.cpp=.o)))
 EXECUTABLE=CameraControllerApi
+RESOURCES= resources/error_messages.xml resources/settings.xml webif
 
-all: $(SOURCES) $(EXECUTABLE)
-	
-$(EXECUTABLE): $(OBJECTS)
-	$(CC) $(LDFLAGS) $(OBJECTS) -o $@
+all: dirs $(CPP_FILES) bin/$(EXECUTABLE)
 
-.cpp.o:
-	$(CC) $(CFLAGS) $< -o $@
+bin/$(EXECUTABLE): $(OBJ_FILES)
+	$(CC) $(LDFLAGS) -o $@ $^
+
+obj/%.o: src/%.cpp
+	$(CC) $(CXXFLAGS) -c -o $@ $<
+
+dirs:
+	@mkdir -p bin obj
+	@cp -R $(RESOURCES) bin
+
 
 .PHONY: clean
-clean: 
-	$(RM) $(EXECUTABLE) $(OBJECTS)
+clean:
+	$(RM) -rf $(EXECUTABLE) obj bin
