--- a/.travis.yml
+++ b/.travis.yml
@@ -17,11 +17,12 @@ deploy:
   provider: releases
   api_key:
     secure: faqXDjv3SX3BYg36+a4xvFZ5L26sIz1u7edjtj1KgqIqUPrBXfj1FAkEjpEAlvLlS0OL2OaJghXua1NuZlzL7+dl2eRtD32oZWyejUS+jy2yFwRJ3oSXGL5T20MM5xFUpDXRm6VuoIFVfuzieJqzz7gVPMr/uT1JnCqbB3GEtAc=
+  file_glob: true
   file:
     - bin/CameraControllerApi
     - bin/error_messages.xml
     - bin/settings.xml
-    - bin/webif/
+    - bin/webif/*
   skip_cleanup: true
   on:
     repo: scheckmedia/CameraControllerApi
