--- a/.travis.yml
+++ b/.travis.yml
@@ -19,8 +19,7 @@ deploy:
   provider: releases
   api_key:
     secure: faqXDjv3SX3BYg36+a4xvFZ5L26sIz1u7edjtj1KgqIqUPrBXfj1FAkEjpEAlvLlS0OL2OaJghXua1NuZlzL7+dl2eRtD32oZWyejUS+jy2yFwRJ3oSXGL5T20MM5xFUpDXRm6VuoIFVfuzieJqzz7gVPMr/uT1JnCqbB3GEtAc=
-  file:
-    - CameraControllerApi-$TRAVIS_TAG.tar.gz
+  file: CameraControllerApi-$TRAVIS_TAG.tar.gz
   skip_cleanup: true
   on:
     repo: scheckmedia/CameraControllerApi
